fronted alignment tweaks to create issue modal

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -92,6 +92,10 @@
     background-color: #CCC;
     color: black;
   }
+}
 
-
+.btn.btn-small {
+  font-size: 13px;
+  height: 30px;
+  line-height: 30px;
 }
