--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -104,12 +104,6 @@
      box-shadow: 0 1px 0 0 #888;
    }
 
-   .btn.waves-default {
-     background-color: #888;
-     position: relative;
-     left: 30px;
-     top: 10px;
-   }
 }
 
 .completed-work-toggle {
